--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
       div#n2-ss-7 .n2-font-dc41c16042ce8c0c004df32256130c1d-hover {
         font-family: "Vollkorn";
         color: #ffffff;
-        font-size: 625%;
+        font-size: 35px;
         text-shadow: 0px 2px 2px RGBA(0, 0, 0, 1);
         line-height: 1;
         font-weight: normal;
@@ -198,6 +198,12 @@
         word-spacing: normal;
         text-transform: none;
         font-weight: 700;
+      }
+
+      @media (min-width: 800px) {
+        div#n2-ss-7 .n2-font-dc41c16042ce8c0c004df32256130c1d-hover {
+          font-size: 65px !important;
+        }
       }
 
       div#n2-ss-7 .n-uc-1cc78740b662d-inner {
@@ -4036,7 +4042,7 @@
                                                         style="display: block"
                                                         onclick='n2ss.scroll(event, "element", "[data-alias=\"tokenomics\"]");'
                                                         href="#"
-                                                        >SHAGGO<br />NOMICS</a
+                                                        >SHAGGONOMICS</a
                                                       >
                                                     </div>
                                                   </div>
@@ -4126,7 +4132,7 @@
                                                         style="display: block"
                                                         onclick='n2ss.scroll(event, "element", "[data-alias=\"howtobuy\"]");'
                                                         href="https://app.uniswap.org/#/swap?outputCurrency= d"
-                                                        >Buy $Shaggonomics</a
+                                                        >Buy $SHAGONNOMICS</a
                                                       >
                                                     </div>
                                                   </div>
