--- a/index.html
+++ b/index.html
@@ -4211,16 +4211,13 @@
                                                     <div
                                                       id="n2-ss-7item10"
                                                       class="n2-font-9616f90d6f482aa0aefa0a4841d627b3-hover n2-ss-item-content n2-ss-text n2-ow"
-                                                      style="display: block"
+                                                      style="
+                                                        display: block;
+                                                        text-align: center;
+                                                      "
                                                     >
-                                                      Lorem ipsum dolor sit,
-                                                      amet consectetur
-                                                      adipisicing elit.
-                                                      Inventore id maiores
-                                                      magnam suscipit hic
-                                                      consequatur quibusdam
-                                                      quasi unde recusandae
-                                                      culpa.
+                                                      Matt Furie | ZOGZ
+                                                      Collection
                                                       <br />
                                                       <p
                                                         style="color: #fff"
