--- a/index.html
+++ b/index.html
@@ -4072,7 +4072,7 @@
                                                         style="display: block"
                                                         onclick='n2ss.scroll(event, "element", "[data-alias=\"about\"]");'
                                                         href=""
-                                                        >Community</a
+                                                        >Telegram</a
                                                       >
                                                     </div>
                                                   </div>
@@ -4102,7 +4102,7 @@
                                                         style="display: block"
                                                         onclick='n2ss.scroll(event, "element", "[data-alias=\"tokenomics\"]");'
                                                         href=""
-                                                        >Social</a
+                                                        >Twitter</a
                                                       >
                                                     </div>
                                                   </div>
