--- a/index.html
+++ b/index.html
@@ -4203,28 +4203,6 @@
                                                     </div>
                                                   </div>
                                                   <div
-                                                    class="n2-ss-layer n2-ow n-uc-1117eeb2f4184"
-                                                    data-pm="normal"
-                                                    data-animv2='{"repeatable":1,"inPlayEvent":"LayerMouseEnter,","basic":{"in":{"type":"basic","name":"Bounce","keyFrames":[{"duration":0.18},{"duration":0.18,"ease":"easeInQuint","y":30},{"duration":0.15},{"duration":0.15,"ease":"easeInQuint","y":15},{"duration":0.12},{"duration":0.12,"ease":"easeInQuint","y":8}]}}}'
-                                                    data-sstype="layer"
-                                                  >
-                                                    <div
-                                                      id="n2-ss-7item10"
-                                                      class="n2-font-9616f90d6f482aa0aefa0a4841d627b3-hover n2-ss-item-content n2-ss-text n2-ow"
-                                                      style="
-                                                        display: block;
-                                                        text-align: center;
-                                                      "
-                                                    >
-                                                      Matt Furie | ZOGZ
-                                                      Collection
-                                                      <br />
-                                                      <p
-                                                        style="color: #fff"
-                                                      ></p>
-                                                    </div>
-                                                  </div>
-                                                  <div
                                                     class="n2-ss-layer n2-ow n2-ss-layer--block n2-ss-has-self-align n-uc-1190b660bbc27"
                                                     data-pm="normal"
                                                     data-sstype="row"
@@ -4390,6 +4368,25 @@
                                                         </div>
                                                       </div>
                                                     </div>
+                                                  </div>
+                                                </div>
+                                                <div
+                                                  class="n2-ss-layer n2-ow n-uc-1117eeb2f4184"
+                                                  data-pm="normal"
+                                                  data-animv2='{"repeatable":1,"inPlayEvent":"LayerMouseEnter,","basic":{"in":{"type":"basic","name":"Bounce","keyFrames":[{"duration":0.18},{"duration":0.18,"ease":"easeInQuint","y":30},{"duration":0.15},{"duration":0.15,"ease":"easeInQuint","y":15},{"duration":0.12},{"duration":0.12,"ease":"easeInQuint","y":8}]}}}'
+                                                  data-sstype="layer"
+                                                >
+                                                  <div
+                                                    id="n2-ss-7item10"
+                                                    class="n2-font-9616f90d6f482aa0aefa0a4841d627b3-hover n2-ss-item-content n2-ss-text n2-ow"
+                                                    style="
+                                                      display: block;
+                                                      text-align: center;
+                                                    "
+                                                  >
+                                                    Matt Furie | ZOGZ Collection
+                                                    <br />
+                                                    <p style="color: #fff"></p>
                                                   </div>
                                                 </div>
                                               </div>
