--- a/index.html
+++ b/index.html
@@ -4070,8 +4070,7 @@
                                                       <a
                                                         class="n2-ow n2-font-0f364a674188f58bc71a1a0da6bbbbc9-hover"
                                                         style="display: block"
-                                                        onclick='n2ss.scroll(event, "element", "[data-alias=\"about\"]");'
-                                                        href=""
+                                                        href="https://t.me/SHAGGONOMICS"
                                                         >Telegram</a
                                                       >
                                                     </div>
@@ -4281,7 +4280,8 @@
                                                               <div
                                                                 class="n2-ss-item-image-content n2-ss-item-content n2-ow-all"
                                                               >
-                                                                <a href=""
+                                                                <a
+                                                                  href="https://t.me/SHAGGONOMICS"
                                                                   ><img
                                                                     id="n2-ss-7item12"
                                                                     alt
