--- a/index.html
+++ b/index.html
@@ -4640,20 +4640,68 @@
                                 ></div>
                               </div>
                             </div>
+                          </div>
+                        </div>
+                      </div>
+                      <ss3-loader></ss3-loader>
+                    </div>
+                  </div>
+                  <div class="n2_clear"></div>
+                </div>
+              </ss3-force-full-width>
+            </div>
+            <div style="width: 100%">
+              <ss3-force-full-width
+                data-overflow-x="body"
+                data-horizontal-selector="body"
+                style="transform: translate3d(0px, 0px, 0px); opacity: 1"
+              >
+                <div
+                  class="n2-section-smartslider fitvidsignore n2_clear"
+                  data-ssid="10"
+                >
+                  <div
+                    id="n2-ss-10-align"
+                    class="n2-ss-align n2-ss-align-visible"
+                  >
+                    <div class="n2-padding">
+                      <div
+                        id="n2-ss-10"
+                        data-creator="Smart Slider 3"
+                        data-responsive="fullwidth"
+                        class="n2-ss-slider n2-ow n2-has-hover n2-ss-mobilePortrait n2-ss-loaded"
+                        data-device-mode="mobilePortrait"
+                      >
+                        <div class="n2-ss-slider-1 n2-ow" style="">
+                          <div class="n2-ss-slider-2 n2-ow">
+                            <div class="n2-ss-slide-backgrounds n2-ow-all">
+                              <div
+                                class="n2-ss-slide-background"
+                                data-public-id="1"
+                                data-mode="fill"
+                              >
+                                <div
+                                  data-color="RGBA(32,31,37,1)"
+                                  style="background-color: #000"
+                                  class="n2-ss-slide-background-color"
+                                  data-overlay="1"
+                                ></div>
+                              </div>
+                            </div>
                             <div class="n2-ss-slider-3 n2-ow">
                               <svg
                                 xmlns="http://www.w3.org/2000/svg"
-                                viewBox="0 0 1200 200"
+                                viewBox="0 0 1200 1000"
                                 data-related-device="desktopPortrait"
                                 class="n2-ow n2-ss-preserve-size n2-ss-preserve-size--slider n2-ss-slide-limiter"
-                              />
+                              ></svg>
                               <div
                                 data-first="1"
                                 data-slide-duration="0"
-                                data-id="12"
+                                data-id="10"
                                 data-slide-public-id="1"
                                 data-title="Slide"
-                                class="n2-ss-slide n2-ow n2-ss-slide-12"
+                                class="n2-ss-slide n2-ow n2-ss-slide-10 n2-ss-slide-active"
                               >
                                 <div
                                   role="note"
@@ -4666,16 +4714,119 @@
                                   class="n2-ss-layers-container n2-ss-slide-limiter n2-ow"
                                 >
                                   <div
-                                    class="n2-ss-layer n2-ow n-uc-BksYy0AZlJWe"
+                                    class="n2-ss-layer n2-ow n-uc-xt2uWlvOkGuf"
                                     data-sstype="slide"
                                     data-pm="default"
+                                    style="perspective: 1000px"
                                   >
                                     <div
-                                      class="n2-ss-layer n2-ow n-uc-ZFmo9ZBMzcIJ"
+                                      class="n2-ss-layer n2-ow n-uc-vSbTczN01RRM"
                                       data-pm="default"
                                       data-sstype="content"
                                       data-hasbackground="0"
-                                    ></div>
+                                    >
+                                      <div
+                                        class="n2-ss-section-main-content n2-ss-layer-with-background n2-ss-layer-content n2-ow n-uc-vSbTczN01RRM-inner"
+                                        style="perspective: 1000px"
+                                      >
+                                        <div
+                                          class="n2-ss-layer n2-ow n-uc-1cda73f23a20b"
+                                          data-pm="normal"
+                                          data-sstype="layer"
+                                        >
+                                          <div
+                                            id="n2-ss-10item1"
+                                            class="n2-font-dc41c16042ce8c0c004df32256130c1d-hover n2-ss-item-content n2-ss-text n2-ow"
+                                            style="display: block"
+                                          >
+                                            Nomics
+                                          </div>
+                                        </div>
+                                        <div
+                                          class="n2-ss-layer n2-ow n-uc-149bff1aa6a02"
+                                          data-pm="normal"
+                                          data-sstype="layer"
+                                        >
+                                          <div
+                                            id="n2-ss-10item2"
+                                            class="n2-font-6c2cf5064ca9d75a0d33b48a0a41261f-hover n2-ss-item-content n2-ss-text n2-ow"
+                                            style="display: block"
+                                          >
+                                            Total Supply: <br />100,000,000
+                                          </div>
+                                        </div>
+                                        <div
+                                          class="n2-ss-layer n2-ow n2-ss-layer--block n2-ss-has-self-align n-uc-16807db0135cf"
+                                          data-pm="normal"
+                                          data-sstype="row"
+                                        >
+                                          <div
+                                            class="n2-ss-layer-row n2-ss-layer-with-background n-uc-16807db0135cf-inner"
+                                          >
+                                            <div
+                                              class="n2-ss-layer-row-inner"
+                                              style="perspective: 1000px"
+                                            >
+                                              <div
+                                                class="n2-ss-layer n2-ow n-uc-15e8dda174924"
+                                                data-pm="default"
+                                                data-sstype="col"
+                                              >
+                                                <div
+                                                  class="n2-ss-layer-col n2-ss-layer-with-background n2-ss-layer-content n-uc-15e8dda174924-inner"
+                                                  style="perspective: 1000px"
+                                                >
+                                                  <div
+                                                    class="n2-ss-layer n2-ow n-uc-188e8f17ceea4"
+                                                    data-pm="normal"
+                                                    data-sstype="layer"
+                                                  >
+                                                    <div
+                                                      id="n2-ss-10item4"
+                                                      class="n2-font-d751b0c721899647b1dd25941fcfde37-hover n2-ss-item-content n2-ss-text n2-ow"
+                                                      style="display: block"
+                                                    >
+                                                      TAX<br />1% Buy / 1% Sell
+                                                    </div>
+                                                  </div>
+                                                  <!-- <div
+                                                    class="n2-ss-layer n2-ow n-uc-1fd490418d3c6"
+                                                    data-pm="normal"
+                                                    data-animv2='{"repeatable":1,"inPlayEvent":"LayerMouseEnter,","basic":{"in":{"type":"basic","name":"Bounce","keyFrames":[{"duration":0.18},{"duration":0.18,"ease":"easeInQuint","y":30},{"duration":0.15},{"duration":0.15,"ease":"easeInQuint","y":15},{"duration":0.12},{"duration":0.12,"ease":"easeInQuint","y":8}]}}}'
+                                                    data-sstype="layer"
+                                                    style="
+                                                      transform-origin: 50% 50%
+                                                        0px;
+                                                      transform: translate3d(
+                                                        0px,
+                                                        0px,
+                                                        0px
+                                                      );
+                                                    "
+                                                  >
+                                                    <div
+                                                      id="n2-ss-10item3"
+                                                      class="n2-font-2e9ff72ab7c6fdc0a96eb585f9b9e506-hover n2-ss-item-content n2-ss-text n2-ow"
+                                                      style="display: block"
+                                                    >
+                                                      1/1 percent Taxes, No
+                                                      Bullshit.<br /><br />
+                                                      It’s that simple and
+                                                      contract is renounced.
+                                                      <br />
+                                                      <br />
+                                                      LP is locked and to be
+                                                      extended at higher
+                                                      milestones.
+                                                    </div>
+                                                  </div> -->
+                                                </div>
+                                              </div>
+                                            </div>
+                                          </div>
+                                        </div>
+                                      </div>
+                                    </div>
                                   </div>
                                 </div>
                               </div>
