--- a/index.html
+++ b/index.html
@@ -4100,7 +4100,7 @@
                                                         class="n2-ow n2-font-0f364a674188f58bc71a1a0da6bbbbc9-hover"
                                                         style="display: block"
                                                         onclick='n2ss.scroll(event, "element", "[data-alias=\"tokenomics\"]");'
-                                                        href=""
+                                                        href="https://twitter.com/SHAGGONOMIC"
                                                         >Twitter</a
                                                       >
                                                     </div>
@@ -4250,7 +4250,8 @@
                                                               <div
                                                                 class="n2-ss-item-image-content n2-ss-item-content n2-ow-all"
                                                               >
-                                                                <a href=" "
+                                                                <a
+                                                                  href="https://twitter.com/SHAGGONOMIC"
                                                                   ><img
                                                                     id="n2-ss-7item11"
                                                                     alt
