--- a/index.html
+++ b/index.html
@@ -4131,7 +4131,7 @@
                                                         style="display: block"
                                                         onclick='n2ss.scroll(event, "element", "[data-alias=\"howtobuy\"]");'
                                                         href="https://app.uniswap.org/#/swap?outputCurrency= d"
-                                                        >Buy $SHAGONNOMICS</a
+                                                        >Buy $SHAGGONNOMICS</a
                                                       >
                                                     </div>
                                                   </div>
